# prototools

./: .code-workspace  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  LICENSE  README.md  REUSE.toml  SECURITY.md  default.nix  dev-shell.nix  shell.nix
attic/crane-playground/app-crate/: Cargo.toml  build.rs
attic/crane-playground/app-crate/src/: main.rs
attic/crane-playground/lib-crate/: Cargo.toml
attic/crane-playground/lib-crate/src/: lib.rs
fdp-scan-pyo3/: .gitignore  Cargo.toml  fdp_scan.pyi  pyproject.toml
fdp-scan-pyo3/fdp_scan_lib/: __init__.py
fdp-scan-pyo3/src/: lib.rs
fdp-scan-pyo3/tests/: test_scan.py
protolens/: Cargo.toml  build.rs  todo.md
protolens/nvim/: init.lua
protolens/src/: colorize.rs  complete.rs  decode.rs  export_descriptor.rs  extract.rs  main.rs  override_pane.rs  render_cache.rs  theme.rs  tui.rs
protolens/src/tui/: command_line.rs  event.rs  heat_cue.rs  heat_worker.rs  key_dispatch.rs  manage_pane.rs  mod.rs  mouse.rs  navigation.rs  neovim.rs  override_apply.rs  override_select.rs  render.rs  tests.rs
protolens/src/tui/tests/: command_line.rs  heat_cue.rs  key_dispatch.rs  manage_pane.rs  mod.rs  mouse.rs  navigation.rs  override_apply.rs  override_select.rs  render.rs  support.rs
protolens/tests/: batch_export.rs  batch_extract.rs
protoscan/: pyproject.toml
protoscan/src/protoscan/: .gitignore  cli.py  gen_man.py
protoscan/src/protoscan/tests/: __init__.py  test_cli.py
prototext/: Cargo.toml  README.md  build.rs
prototext-core/: Cargo.toml  build.rs
prototext-core/benches/: codec.rs
prototext-core/fixtures/: descriptor.pb  descriptor_protoc.txt
prototext-core/src/: decoder.rs  helpers.rs  instantiate.rs  lib.rs  schema.rs
prototext-core/src/decoder/: codec.rs  mod.rs  packed.rs  types.rs
prototext-core/src/helpers/: codecs.rs  mod.rs  varint.rs  wire.rs
prototext-core/src/serialize/: common.rs  mod.rs
prototext-core/src/serialize/common/: escape.rs  floats.rs  format.rs  mod.rs  scalars.rs
prototext-core/src/serialize/encode_text/: encode_annotation.rs  fields.rs  frame.rs  mod.rs  placeholder.rs
prototext-core/src/serialize/render_text/: helpers.rs  mod.rs  packed.rs  sink.rs  varint.rs
prototext-graph/: Cargo.toml
prototext-graph-pyo3/: .gitignore  Cargo.toml  pyproject.toml
prototext-graph-pyo3/prototext_graph_lib/: __init__.py
prototext-graph-pyo3/src/: lib.rs
prototext-graph/src/: fds_index.rs
prototext-graph/src/build_scoring_graph/: graph.rs  hopcroft.rs  load.rs
prototext-graph/src/score/: load.rs  mod.rs  tests.rs  walk.rs
prototext-graph/tests/: hopcroft_suite.rs
prototext-pyo3/: .gitignore  Cargo.toml  pyproject.toml
prototext-pyo3/prototext_codec_lib/: __init__.py  prototext_codec_lib.pyi
prototext-pyo3/src/: lib.rs
prototext-pyo3/tests/: test_codec.py
prototext/fixtures/: index.toml
prototext/fixtures/cases/: canonical_groups.pb  canonical_mixed.pb  canonical_nested.pb  canonical_repeated.pb  canonical_scalars.pb  canonical_single.pb  canonical_strings.pb  canonical_unknown.pb  enum_collision_color_known.pb  enum_collision_color_packed.pb  enum_collision_color_repeated.pb  enum_collision_color_unknown.pb  enum_collision_color_unknown_repeated.pb  enum_collision_float_kind.pb  enum_collision_packed_mixed.pb  enum_in_group.pb  enum_in_nested_message.pb  fdp1.pb  fdp2.pb  fdp_complex.pb  fdp_enum_nested.pb  fdp_service.pb  hidden.pb  interleaved.pb  mpm_complex_message.pb  mpm_edge_cases.pb  num_bool_false.pb  num_bool_true.pb  num_double_1_23e_4.pb  num_double_1e100.pb  num_double_1e_100.pb  num_double_9_9e_5.pb  num_double_inf.pb  num_double_nan.pb  num_double_neg_inf.pb  num_double_neg_one.pb  num_double_neg_zero.pb  num_double_one.pb  num_double_one_third.pb  num_double_pi.pb  (+99 more)
prototext/fixtures/prebuilt/: .gitignore
prototext/fixtures/schemas/: enum_collision.proto  knife.proto  message_set.proto
prototext/src/: complete.rs  gen_man.rs  inputs.rs  lazy_pool.rs  lib.rs  main.rs  run.rs
prototext/src/protocraft/: craft_a.rs  mod.rs
prototext/tests/: e2e.rs  node_span.rs  protocraft.rs  roundtrip.rs
prototext/wkt/: SOURCES
prototext/wkt/prebuilt/: README.md  wkt.rkyv  wkt_index.rkyv
reproto/: README.md  REVIEW.md  pyproject.toml
reproto/patch/: lib_proto_helpers.sh  patch_reproto.sh
reproto/src/lib/: warnings.py
reproto/src/reproto/: INSIGHTS.md  __init__.py  anomalies.py  base.py  build_index.py  cli.py  completions.sh  context.py  fake_types.py  feature_resolution.py  field_descriptor.py  filter_config.py  gen_man.py  gen_man_instantiate.py  globals.py  instantiate.py  instantiate_cli.py  load.py  mappings.py  option_messages.py  option_renderers.py  option_rendering.py  phases.py  re_descriptor.py  re_enum.py  re_enum_value.py  re_field.py  re_file.py  re_method.py  re_service.py  re_simple.py  reproto.py  scalar.py  show.py  simple_types.py  source_info.py  split_fdps.py  syntax.py  text.py  topology.py  (+2 more)
reproto/src/reproto/lib/: .gitignore  console.py  warnings.py
reproto/src/reproto/tests/: README.md  __init__.py  conftest.py  proto_normalize.py  test_anomalies.py  test_editions_rendering.py  test_emit_binary.py  test_emit_scoring_graphs.py  test_extension_field_options.py  test_feature_resolution.py  test_filter_config.py  test_load.py  test_path_patterns.py  test_phases.py  test_prune_seed_patterns.py  test_roundtrip.py  (+10 more)
reproto/src/resources/: .gitignore
reproto/tree-sitter-textproto/: binding.c  grammar.js  highlights.scm  textproto.pyi
score-graph/: Cargo.toml
score-graph-pyo3/: Cargo.toml  pyproject.toml
score-graph-pyo3/scoring_graph_lib/: __init__.py
score-graph-pyo3/src/: lib.rs
score-graph/src/: lib.rs  main.rs
score-graph/src/build_scoring_graph/: graph.rs  hopcroft.rs  load.rs  mod.rs  serial.rs  show.rs
score-graph/src/score/: load.rs  mod.rs  tests.rs  walk.rs
score-graph/tests/: score_e2e.rs
scoring-graph-pyo3/: .gitignore  Cargo.toml  pyproject.toml
scoring-graph-pyo3/scoring_graph_lib/: __init__.py  scoring_graph_lib.pyi
scoring-graph-pyo3/src/: lib.rs
(+416 files in other folders)
