# SPDX-FileCopyrightText: 2026 THALES CLOUD SECURISE SAS
#
# SPDX-License-Identifier: MIT

# Auxiliary pyproject.toml for the fdp_scan Python extension.
# Needed to support Python packaging tools and stub generation.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdp-scan"
version = "0.2.0"
description = "Rust Python extension for scanning binaries for embedded FileDescriptorProto blobs"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["fdp_scan_lib"]

[tool.pyo3-stub-gen]
# pyo3-stub-gen writes fdp_scan_lib.pyi next to this file (i.e. fdp-scan-pyo3/).
