# SPDX-FileCopyrightText: 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

[package]
name        = "protolens"
version     = "0.1.0"
edition     = "2021"
description = "Interactive TUI to decode, navigate, and extract raw bytes from a binary protobuf"
license     = "MIT"
repository  = "https://github.com/ThalesGroup/prototools"

[[bin]]
name = "protolens"
path = "src/main.rs"

[dependencies]
prototext-core        = { workspace = true }
prototext-graph       = { path = "../prototext-graph", version = "0.2.1" }
prost-reflect         = "0.16"
clap                  = { version = "4.5", features = ["derive", "env"] }
clap_complete         = { version = "4.5", features = ["unstable-dynamic"] }
ratatui               = "0.29"
crossterm             = "0.28"
serde                 = { version = "1.0", features = ["derive"] }
serde_norway          = "0.9"
sha2                  = "0.10"
tree-sitter           = "0.26.11"
tree-sitter-highlight = "0.26.11"
terminal-light        = "1.9.0"
terminfo              = "0.9.0"
workspace-hack        = { version = "0.1", path = "../workspace-hack" }
xterm-query           = "0.6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
prost       = "0.14"
prost-types = "0.14"
