# SPDX-FileCopyrightText: 2025-2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
# SPDX-FileCopyrightText: 2025-2026 THALES CLOUD SECURISE SAS
#
# SPDX-License-Identifier: MIT

[package]
name        = "prototext-core"
version     = "0.3.0"
edition     = "2021"
description = "Pure-Rust library for lossless protobuf ↔ enhanced-textproto conversion"
license     = "MIT"
repository  = "https://github.com/ThalesGroup/prototools"
readme      = "../README.md"
keywords    = ["protobuf", "proto", "textproto", "serialization"]
categories  = ["encoding", "parser-implementations"]

[lib]
name       = "prototext_core"
crate-type = ["rlib"]

[features]
# Workaround for prost-reflect bug: is_packed() returns false for proto3
# repeated scalar/enum fields when FieldOptions is present-but-empty in the
# FDS (e.g. because an unrelated custom option is set on the field).
# Enable this feature until the bug is fixed upstream.
# See docs/PROST-ISSUES.md §1.
prost-bug-workaround = []

[dependencies]
prost         = "0.14"
prost-reflect = "0.16"
memchr        = "2"
rand          = { version = "0.8", features = ["std", "std_rng"] }
sha2          = "0.10"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
prost-types = "0.14"
criterion   = "0.5"

[[bench]]
name    = "codec"
harness = false
