# SPDX-FileCopyrightText: 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

# Auxiliary pyproject.toml for the prototext_graph Python extension.
# Needed to support Python packaging tools and stub generation.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prototext_graph"
version = "0.2.0"
description = "Scoring-graph builder Python extension via PyO3"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["prototext_graph_lib"]

[tool.pyo3-stub-gen]
# pyo3-stub-gen writes prototext_graph_lib.pyi next to this file (i.e. prototext-graph-pyo3/).
