# SPDX-FileCopyrightText: 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

[package]
name        = "prototext-graph"
version     = "0.2.1"
edition     = "2021"
description = "Build a Hopcroft-deduplicated scoring graph from reproto YAML output"
license     = "MIT"
repository  = "https://github.com/ThalesGroup/prototools"

[lib]
name       = "prototext_graph"
crate-type = ["rlib"]

[[bin]]
name = "hopcroft_dump"
path = "src/bin/hopcroft_dump.rs"

[[test]]
name = "hopcroft_suite"
path = "tests/hopcroft_suite.rs"

[dependencies]
serde          = { version = "1", features = ["derive"] }
serde_yaml     = "0.9"
rkyv           = { version = "0.8", features = ["little_endian"] }
memmap2        = "0.9"
prototext-core = { workspace = true }
smallvec       = "1"
walkdir        = "2"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile    = "3"
