# SPDX-FileCopyrightText: 2026 THALES CLOUD SECURISE SAS
#
# SPDX-License-Identifier: MIT

# Auxiliary pyproject.toml for the prototext_codec Python extension.
# Needed to support Python packaging tools and stub generation.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prototext_codec"
version = "0.1.0"
description = "Lossless protobuf decoder (Python extension via PyO3)"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["prototext_codec_lib"]

[tool.pyo3-stub-gen]
# pyo3-stub-gen writes prototext_codec_lib.pyi next to this file (i.e. prototext-pyo3/).
