# SPDX-FileCopyrightText: 2025 - 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
# SPDX-FileCopyrightText: 2025 - 2026 THALES CLOUD SECURISE SAS
#
# SPDX-License-Identifier: MIT

[package]
name        = "prototext"
version     = "0.1.4"
edition     = "2021"
description = "Lossless protobuf ↔ enhanced-textproto converter"
license     = "MIT"
repository  = "https://github.com/douzebis/prototools"
readme      = "../README.md"
keywords    = ["protobuf", "proto", "textproto", "cli"]
categories  = ["command-line-utilities", "encoding"]

[package.metadata.docs.rs]
targets = []

[[bin]]
name = "prototext"
path = "src/main.rs"

[[bin]]
name = "prototext-gen-man"
path = "src/gen_man.rs"

[dependencies]
prototext-core = { path = "../prototext-core", version = "0.1.2" }
clap            = { version = "4.5", features = ["derive"] }
clap_complete   = { version = "4.5", features = ["unstable-dynamic"] }
clap_mangen     = "0.2"
globset         = "0.4"
prost           = "0.14"
prost-types     = "0.14"
walkdir         = "2"

[features]
default = ["protox"]
protox = ["dep:protox"]

[build-dependencies]
prost  = "0.14"
protox = { version = "0.9", optional = true }

[[test]]
name    = "protocraft"
path    = "tests/protocraft.rs"
harness = false

[dev-dependencies]
prost-reflect = "0.16"
toml        = "0.8"
prost       = "0.14"
prost-types = "0.14"
