# SPDX-FileCopyrightText: 2025-2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
# SPDX-FileCopyrightText: 2025-2026 THALES CLOUD SECURISE SAS
#
# SPDX-License-Identifier: MIT

[package]
name        = "prototext"
version     = "0.2.0"
edition     = "2021"
description = "Lossless protobuf ↔ enhanced-textproto converter"
license     = "MIT"
repository  = "https://github.com/ThalesGroup/prototools"
readme      = "../README.md"
keywords    = ["protobuf", "proto", "textproto", "cli"]
categories  = ["command-line-utilities", "encoding"]
include     = [
  "src/**",
  "tests/**",
  "fixtures/schemas/**",
  "fixtures/prebuilt/descriptor.pb",
  "fixtures/prebuilt/knife.pb",
  "fixtures/prebuilt/enum_collision.pb",
  "fixtures/prebuilt/message_set.pb",
  "wkt/**",
  "build.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
targets = []

[[bin]]
name = "prototext"
path = "src/main.rs"

[[bin]]
name = "prototext-gen-man"
path = "src/gen_man.rs"

[dependencies]
prototext-core  = { path = "../prototext-core", version = "0.2.0", features = ["prost-bug-workaround"] }
prototext-graph = { path = "../prototext-graph", version = "0.2.0" }
memmap2         = "0.9"
rkyv            = { version = "0.8", features = ["little_endian"] }
clap            = { version = "4.5", features = ["derive"] }
clap_complete   = { version = "4.5", features = ["unstable-dynamic"] }
clap_mangen     = "0.2"
globset         = "0.4"
serde           = { version = "1", features = ["derive"] }
serde_yaml      = "0.9"
prost           = "0.14"
prost-reflect   = "0.16"
prost-types     = "0.14"
walkdir         = "2"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default      = ["wkt-db"]
wkt-db       = []
prebuilt-wkt = []   # copy wkt/prebuilt/*.rkyv committed to git (nixpkgs build)

[build-dependencies]
prost = "0.14"

[[test]]
name    = "protocraft"
path    = "tests/protocraft.rs"
harness = false

[dev-dependencies]
prost-reflect = "0.16"
toml        = "0.8"
prost       = "0.14"
prost-types = "0.14"
