# SPDX-FileCopyrightText: 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

# Auxiliary pyproject.toml for the scoring_graph Python extension.
# Needed to support Python packaging tools and stub generation.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoring_graph"
version = "0.1.0"
description = "Scoring-graph builder Python extension via PyO3"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["scoring_graph_lib"]

[tool.pyo3-stub-gen]
# pyo3-stub-gen writes scoring_graph_lib.pyi next to this file (i.e. score-graph-pyo3/).
