# SPDX-FileCopyrightText: 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

[package]
name = "lib-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
# A real external dep with a build script, so fingerprints are interesting
serde = { version = "1", features = ["derive"] }
